Mise à  jour du code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.About"
+        <activity
+            android:name=".activity.About"
             android:label="About">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.Accueil" />
         </activity>
-        <activity android:name=".activity.Accueil"
-            android:label="Accueil">
-
-        </activity>
+        <activity
+            android:name=".activity.Accueil"
+            android:label="Accueil"/>
     </application>
 
 </manifest>
